# alt

./: README.md  alt.py  alt2.py  layout.css  main.py  pyproject.toml
layouts/: qwerty.json  qwerty.yaml
wordlists/: english-5k.txt  english.txt  quotes.txt
