[tool.poetry]
name = "alt"
version = "0.1.0"
description = "Keyboard layout alt-fingering analysis and training tool"
authors = ["Evan Callicoat <apsu@propter.net>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.23.0"


[tool.poetry.group.dev.dependencies]
textual = {extras = ["dev"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
